--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,9 @@ export(batch_face_emotion)
 export(batch_facial_features)
 export(batch_image_features)
 export(batch_keywords)
-export(batch_myers_briggs)
 export(batch_named_entities)
+export(batch_personality)
+export(batch_personas)
 export(batch_political)
 export(batch_predict_language)
 export(batch_sentiment)
@@ -26,11 +27,12 @@ export(image_recognition)
 export(keywords)
 export(language)
 export(named_entities)
+export(personality)
+export(personas)
 export(political)
 export(sentiment)
 export(sentiment_hq)
 export(text_tags)
-export(myers_briggs)
 export(twitter_engagement)
 import(EBImage)
 import(base64enc)
